--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                 <a class="nav-link" href="javascript:void(0)">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">About Us</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)">Menu</a>
               </li>
               <li class="nav-item">
@@ -57,6 +54,13 @@
       <h1 id="welcome" data-aos="fade-in" data-aos-duration="2000" style="font-size:70px">Welcome to Donut Land</h1>
     </div>
   </div>
+  <section>
+    <h1>Our Menu</h1>
+    <p>
+      Thank you for visiting our site! We are a local family owned Donut Shop located in Royce City, TX. 
+    </p>
+  </section>
+
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
